--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.77.4",
-    "vite": "^5.2.0",
-    "@vitejs/plugin-react": "^4.2.1"
+    "vite": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
